--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
+    "date-fns": "^3.3.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-date-range": "^2.0.0-alpha.4",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.53.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
