--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_PATH = 'http://34.124.201.85:3001/api'
-REACT_APP_API_PATH = 'http://localhost:8000/api'
+REACT_APP_API_PATH = 'http://34.124.201.85:3001/api'
+# REACT_APP_API_PATH = 'http://localhost:8000/api'
